fix: rework on thread-safe classes